data/all_generated_tests/raw_wast_tests/block_UnreachableCodeExecution_2034.wast
;; 5. **Branch Forward to Unreachable**:    - Embed a branch pointing to an instruction label just before `unreachable` inside the block.    - Tests accurate error handling and proper branch target identification.    - Misrouting branches may erroneously navigate to the `unreachable`.

(assert_invalid
  (module
    (func
      (block (br 1) (unreachable))
    )
  )
  "unknown label"
)